--- a/MeetingLog/210706.md
+++ b/MeetingLog/210706.md
@@ -74,7 +74,7 @@
 
   * 복혜빈 : 조장(매니저-팀원간 전달사항 전달, ppt 매니저에게 제출)
 
-  * 허세영 : 계획서, ppt 작성
+  * 허세영 : 계획서, 발표 ppt 작성
 
   * 두 개의 주제에 대해 2명씩 따로 조사
 
@@ -90,7 +90,7 @@
 
         http://data.seoul.go.kr/dataList/OA-15568/S/1/datasetView.do
 
-    * 원자재 생산 가격 및 농수산물 생산 수급 현황/국제 곡물 가격에 따른 국내 곡물가격
+    * 농수산물 생산 수급 현황에 따른/국제 곡물 가격에 따른 전통시장, 대형마트 생필품 가격
 
       * 허세영, 복혜빈
 
