Add preprocessing final code and update geatrigger preprocessing code(add save code)

--- a/codes/210706김기찬.ipynb
+++ b/codes/210706김기찬.ipynb
@@ -50,7 +50,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4f0e880b28c408fa9496f72da4be187",
+       "model_id": "5e0a41175b34456d86f5c37ce31aed64",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3744,7 +3744,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "52 7 {'남구로시장', '송화시장', '신창시장', '남성시장', '방림시장', '도곡시장', '방배종합시장'}\n"
+      "52 7 {'신창시장', '남성시장', '방배종합시장', '도곡시장', '송화시장', '방림시장', '남구로시장'}\n"
      ]
     }
    ],
@@ -3771,11 +3771,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "남구로시장 / 남구로시장(구 구로자율시장)\n",
-      "송화시장 / 송화골목시장\n",
       "신창시장 / 창동신창시장\n",
-      "{'남구로시장(구 구로자율시장)': '남구로시장', '송화골목시장': '송화시장', '창동신창시장': '신창시장'}\n",
-      "4 {'남성시장', '방림시장', '도곡시장', '방배종합시장'}\n"
+      "송화시장 / 송화골목시장\n",
+      "남구로시장 / 남구로시장(구 구로자율시장)\n",
+      "{'창동신창시장': '신창시장', '송화골목시장': '송화시장', '남구로시장(구 구로자율시장)': '남구로시장'}\n",
+      "4 {'방림시장', '남성시장', '방배종합시장', '도곡시장'}\n"
      ]
     }
    ],
@@ -3816,7 +3816,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "52 14 {'장위골목시장', '마천중앙시장', '방배종합시장', '용문시장', '신창시장', '송화시장', '관악신사시장(신림4동)', '남성시장', '공릉동 도깨비시장', '방림시장', '수유재래시장', '원당종합시장', '대림시장', '신원시장(신림1동)'}\n"
+      "52 14 {'용문시장', '관악신사시장(신림4동)', '공릉동 도깨비시장', '신창시장', '남성시장', '방배종합시장', '신원시장(신림1동)', '장위골목시장', '수유재래시장', '송화시장', '원당종합시장', '방림시장', '대림시장', '마천중앙시장'}\n"
      ]
     }
    ],
@@ -3834,18 +3834,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "장위골목시장 / 장위전통시장\n",
-      "마천중앙시장 / 마천시장\n",
       "용문시장 / 용문전통시장\n",
-      "신창시장 / 창동신창시장\n",
-      "송화시장 / 송화골목시장\n",
       "관악신사시장(신림4동) / 관악신사시장\n",
+      "신창시장 / 창동신창시장\n",
       "남성시장 / 남성역골목시장\n",
-      "수유재래시장 / 수유전통시장\n",
-      "대림시장 / 대림골목시장\n",
       "신원시장(신림1동) / 신원시장\n",
-      "{'장위전통시장': '장위골목시장', '마천시장': '마천중앙시장', '용문전통시장': '용문시장', '창동신창시장': '신창시장', '송화골목시장': '송화시장', '관악신사시장': '관악신사시장(신림4동)', '남성역골목시장': '남성시장', '수유전통시장': '수유재래시장', '대림골목시장': '대림시장', '신원시장': '신원시장(신림1동)'}\n",
-      "4 {'방배종합시장', '공릉동 도깨비시장', '방림시장', '원당종합시장'}\n"
+      "장위골목시장 / 장위전통시장\n",
+      "수유재래시장 / 수유전통시장\n",
+      "송화시장 / 송화골목시장\n",
+      "대림시장 / 대림골목시장\n",
+      "마천중앙시장 / 마천시장\n",
+      "{'용문전통시장': '용문시장', '관악신사시장': '관악신사시장(신림4동)', '창동신창시장': '신창시장', '남성역골목시장': '남성시장', '신원시장': '신원시장(신림1동)', '장위전통시장': '장위골목시장', '수유전통시장': '수유재래시장', '송화골목시장': '송화시장', '대림골목시장': '대림시장', '마천시장': '마천중앙시장'}\n",
+      "4 {'공릉동 도깨비시장', '방배종합시장', '원당종합시장', '방림시장'}\n"
      ]
     }
    ],
@@ -3889,7 +3889,7 @@
     {
      "data": {
       "text/plain": [
-       "{'남구로시장(구 구로자율시장)': '남구로시장', '송화골목시장': '송화시장', '창동신창시장': '신창시장'}"
+       "{'창동신창시장': '신창시장', '송화골목시장': '송화시장', '남구로시장(구 구로자율시장)': '남구로시장'}"
       ]
      },
      "execution_count": 38,
@@ -3909,16 +3909,16 @@
     {
      "data": {
       "text/plain": [
-       "{'장위전통시장': '장위골목시장',\n",
-       " '마천시장': '마천중앙시장',\n",
-       " '용문전통시장': '용문시장',\n",
-       " '창동신창시장': '신창시장',\n",
-       " '송화골목시장': '송화시장',\n",
+       "{'용문전통시장': '용문시장',\n",
        " '관악신사시장': '관악신사시장(신림4동)',\n",
+       " '창동신창시장': '신창시장',\n",
        " '남성역골목시장': '남성시장',\n",
+       " '신원시장': '신원시장(신림1동)',\n",
+       " '장위전통시장': '장위골목시장',\n",
        " '수유전통시장': '수유재래시장',\n",
+       " '송화골목시장': '송화시장',\n",
        " '대림골목시장': '대림시장',\n",
-       " '신원시장': '신원시장(신림1동)'}"
+       " '마천시장': '마천중앙시장'}"
       ]
      },
      "execution_count": 39,
@@ -5074,7 +5074,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'조기', '고등어', '오이', '배', '명태', '냉동참조기', '사과', '양파', '삼겹살', '호박', '오징어', '달걀', '동태', '상추', '돼지고기', '배추', '쇠고기', '애호박', '닭고기', '갈치', '무'}\n"
+      "{'사과', '삼겹살', '오이', '냉동참조기', '조기', '달걀', '애호박', '쇠고기', '돼지고기', '고등어', '명태', '오징어', '호박', '무', '닭고기', '배', '상추', '동태', '갈치', '양파', '배추'}\n"
      ]
     }
    ],
@@ -5590,6 +5590,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_necessity.to_csv('../datas/huge/df_necessity.csv', encoding='cp949')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 63,
    "metadata": {},
    "outputs": [
@@ -5806,6 +5815,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sales.to_csv('../datas/huge/df_sales.csv', encoding='cp949')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 64,
    "metadata": {},
    "outputs": [
@@ -5902,7 +5920,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_market_address.to_csv('../datas/huge/df_market_address.csv', encoding='cp949')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5911,7 +5938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -5952,7 +5979,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5964,7 +5991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -6240,7 +6267,7 @@
        "[171039 rows x 14 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6251,7 +6278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6260,7 +6287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -6633,7 +6660,7 @@
        "[94393 rows x 88 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6644,7 +6671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -6859,7 +6886,7 @@
        "[94393 rows x 10 columns]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6870,7 +6897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -6981,7 +7008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -7004,7 +7031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -7035,7 +7062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -7069,7 +7096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -7087,7 +7114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7096,7 +7123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -7214,7 +7241,7 @@
        "[844 rows x 3 columns]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7225,7 +7252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -7249,7 +7276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
