--- a/codes/210712전처리통합.ipynb
+++ b/codes/210712전처리통합.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "fe4efe4a",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9e1edc19",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c488c0f8",
    "metadata": {
     "scrolled": true
@@ -429,7 +429,7 @@
        "[132321 rows x 81 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "bbf28194",
    "metadata": {
     "scrolled": true
@@ -816,7 +816,7 @@
        "[135578 rows x 80 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b19ceb2b",
    "metadata": {
     "scrolled": true
@@ -1216,7 +1216,7 @@
        "[132321 rows x 81 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d0ce4c25",
    "metadata": {
     "scrolled": true
@@ -1616,7 +1616,7 @@
        "[16773 rows x 81 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1627,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "6e2af367",
    "metadata": {
     "scrolled": true
@@ -2003,7 +2003,7 @@
        "[17073 rows x 80 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2014,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "fa55a397",
    "metadata": {
     "scrolled": true
@@ -2121,7 +2121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "81a80804",
    "metadata": {},
    "outputs": [
@@ -2183,7 +2183,7 @@
        "[0 rows x 81 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2194,7 +2194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "60a2170f",
    "metadata": {},
    "outputs": [],
@@ -2204,7 +2204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "f4e885b6",
    "metadata": {},
    "outputs": [],
@@ -2214,7 +2214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "32bfba58",
    "metadata": {},
    "outputs": [],
@@ -2244,7 +2244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "49d6832c",
    "metadata": {},
    "outputs": [],
@@ -2253,12 +2253,16 @@
     "    '창동신창시장': '신창시장',\n",
     "    '송화시장': '송화골목시장',\n",
     "    '공릉동 도깨비시장': '공릉동도깨비시장',\n",
+    "    '신원시장(신림1동)': '신원시장',\n",
+    "    '수유전통시장(구)수유골목시장': '수유전통시장',\n",
+    "    '원당종합시장': '인헌시장',\n",
+    "    '관악신사시장(신림4동)': '관악신사시장'\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "9695b005",
    "metadata": {},
    "outputs": [],
@@ -2272,7 +2276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "011e6694",
    "metadata": {},
    "outputs": [],
@@ -2284,7 +2288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "2d2c1ac0",
    "metadata": {},
    "outputs": [],
@@ -2294,7 +2298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "ba0ac3a6",
    "metadata": {},
    "outputs": [],
@@ -2304,7 +2308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "ce63c243",
    "metadata": {},
    "outputs": [
@@ -2350,7 +2354,7 @@
        "59  대림시장  37.491372  126.907663"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2361,7 +2365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "275889e2",
    "metadata": {},
    "outputs": [
@@ -2407,7 +2411,7 @@
        "58  대림시장  37.586763  126.91761"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2418,7 +2422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "a7a740d7",
    "metadata": {},
    "outputs": [
@@ -2471,7 +2475,7 @@
        "59  대림시장  37.491372  126.907663"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2483,7 +2487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "f9071f2c",
    "metadata": {},
    "outputs": [],
@@ -2493,7 +2497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "d786ab39",
    "metadata": {},
    "outputs": [
@@ -2534,7 +2538,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2546,7 +2550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "e25c5b35",
    "metadata": {},
    "outputs": [],
@@ -2556,17 +2560,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "d10ed610",
+   "execution_count": 24,
+   "id": "741224d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_market_add.to_csv('../datas/huge/df_market_add.csv', encoding='cp949')"
+    "# df_market_add."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "aa614efd",
    "metadata": {},
    "outputs": [],
@@ -2576,7 +2580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "ab9c35ef",
    "metadata": {},
    "outputs": [],
@@ -2598,7 +2602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "73ca3fd1",
    "metadata": {},
    "outputs": [],
@@ -2629,7 +2633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "0e14ce21",
    "metadata": {},
    "outputs": [],
@@ -2640,7 +2644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "4564eec4",
    "metadata": {},
    "outputs": [],
@@ -2650,7 +2654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "f3760be5",
    "metadata": {},
    "outputs": [],
@@ -2660,7 +2664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "6d8e03c6",
    "metadata": {},
    "outputs": [
@@ -2677,7 +2681,7 @@
        "       '숭인시장', '방림시장', '구로시장', '영동전통시장'], dtype=object)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2688,7 +2692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "72f3fd89",
    "metadata": {},
    "outputs": [],
@@ -2698,7 +2702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "ed4ace78",
    "metadata": {},
    "outputs": [],
@@ -2722,7 +2726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "3599b9cb",
    "metadata": {},
    "outputs": [],
@@ -2731,8 +2735,10 @@
     "    '방배종합시장': \"남부종합시장\", \n",
     "    '남성시장': \"사당시장\", \n",
     "    '영동시장': \"영동전통시장\", \n",
-    "    '장위골목시장': \"장위전통시장\", \n",
-    "    '용문시장': \"용문전통시장\",\n",
+    "#     '장위골목시장': \"장위전통시장\", \n",
+    "    '장위전통시장': \"장위골목시장\", \n",
+    "#     '용문시장': \"용문전통시장\",\n",
+    "    '용문전통시장': \"용문시장\",\n",
     "    '신원시장(신림1동)': \"신원시장\", \n",
     "    '수유재래시장': \"수유전통시장\", \n",
     "    '원당종합시장': \"인헌시장\",\n",
@@ -2748,7 +2754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "d22b13fc",
    "metadata": {},
    "outputs": [],
@@ -2758,7 +2764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "3cd784d9",
    "metadata": {},
    "outputs": [],
@@ -2768,7 +2774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "03566bb5",
    "metadata": {},
    "outputs": [],
@@ -2788,7 +2794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "718a03d3",
    "metadata": {},
    "outputs": [
@@ -2798,7 +2804,7 @@
        "array(['남구로시장', '도곡시장', '구로시장'], dtype=object)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2809,7 +2815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "15d1149e",
    "metadata": {},
    "outputs": [
@@ -3000,7 +3006,7 @@
        "[6504 rows x 9 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3011,7 +3017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "id": "822758c2",
    "metadata": {},
    "outputs": [
@@ -3202,7 +3208,7 @@
        "[167868 rows x 9 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3215,18 +3221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "d8f679a4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 최종 생필품 데이터 외부저장\n",
-    "df_necessities.to_csv('../datas/huge/df_necessities.csv', encoding='cp949')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "id": "eb03ee44",
    "metadata": {},
    "outputs": [],
@@ -3236,7 +3231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "id": "83ded0fe",
    "metadata": {},
    "outputs": [],
@@ -3246,7 +3241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "id": "1eaedd18",
    "metadata": {},
    "outputs": [
@@ -3424,7 +3419,7 @@
        "[9036 rows x 6 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3443,7 +3438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "id": "c243925e",
    "metadata": {},
    "outputs": [],
@@ -3455,7 +3450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 45,
    "id": "919a59d6",
    "metadata": {},
    "outputs": [],
@@ -3465,7 +3460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 46,
    "id": "a6c1e961",
    "metadata": {
     "scrolled": true
@@ -3477,7 +3472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 47,
    "id": "f3264bfd",
    "metadata": {
     "scrolled": true
@@ -3489,7 +3484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 48,
    "id": "ec43996b",
    "metadata": {},
    "outputs": [],
@@ -3501,7 +3496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 49,
    "id": "73e17af3",
    "metadata": {
     "scrolled": true
@@ -3916,7 +3911,7 @@
        "[6283 rows x 529 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3924,17 +3919,6 @@
    "source": [
     "# 최종 유동인구 데이터\n",
     "df_customer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "11553533",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 최종 유동인구 데이터 외부저장, 업데이트\n",
-    "df_customer.to_csv('../datas/huge/df_customer.csv', encoding='cp949')"
    ]
   },
   {
@@ -3947,16 +3931,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "b4b2bea1",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['대림중앙시장', '대림시장'], dtype=object)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_customer[df_customer['시장이름'].str.contains('대림')]['시장이름'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b32c3d86",
+   "metadata": {},
+   "source": [
+    "### 마지막 저장"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "61f24112",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# df_necessities['시장이름'] = df_necessities['시장이름'].replace(market_mapping)\n",
+    "# df_customer['시장이름'] = df_customer['시장이름'].replace(market_mapping)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "6305aa7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_market_add['시장이름'] = df_market_add['시장이름'].replace(market_mapping2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "0a24296f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_necessities['시장이름'] = df_necessities['시장이름'].replace(market_mapping3)\n",
+    "# df_market_add['시장이름'] = df_market_add['시장이름'].replace(market_mapping3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "4190f467",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_market_add = df_market_add.append({'시장이름' : '도곡시장' , '위도' : 37.49747397256715, '경도' : 127.05162196909993}, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "d10ed610",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_market_add.to_csv('../datas/huge/df_market_add.csv', encoding='cp949')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "d8f679a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 최종 생필품 데이터 외부저장\n",
+    "df_necessities.to_csv('../datas/huge/df_necessities.csv', encoding='cp949')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "11553533",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 최종 유동인구 데이터 외부저장, 업데이트\n",
+    "df_customer.to_csv('../datas/huge/df_customer.csv', encoding='cp949')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "c8d27bd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>시장이름</th>\n",
+       "      <th>위도</th>\n",
+       "      <th>경도</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>244</th>\n",
+       "      <td>우림골목시장</td>\n",
+       "      <td>37.596658</td>\n",
+       "      <td>127.098206</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>245</th>\n",
+       "      <td>우림시장</td>\n",
+       "      <td>37.470326</td>\n",
+       "      <td>126.920401</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       시장이름         위도          경도\n",
+       "244  우림골목시장  37.596658  127.098206\n",
+       "245    우림시장  37.470326  126.920401"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_market_add[df_market_add['시장이름'].str.contains('우림')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "cc624568",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_necessities_market_add = df_necessities.merge(df_market_add, how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "efe245f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], dtype=object)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_necessities_market_add[df_necessities_market_add['위도'].isna()]['시장이름'].unique()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50caf76c",
+   "id": "c498702c",
    "metadata": {},
    "outputs": [],
    "source": []
