--- a/codes/210712전처리통합.ipynb
+++ b/codes/210712전처리통합.ipynb
@@ -2562,7 +2562,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "54909db8",
+   "id": "a818b4b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3933,7 +3933,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "1df323df",
+   "id": "7a80636b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3943,7 +3943,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "e216ebd7",
+   "id": "cf755462",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3954,7 +3954,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "d96ab59b",
+   "id": "f1a2fd90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4008,7 +4008,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "a91e0d11",
+   "id": "f4123313",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4024,7 +4024,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "a3c6cfbf",
+   "id": "62f31c3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4034,7 +4034,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "ec657fb3",
+   "id": "3a75027d",
    "metadata": {},
    "outputs": [
     {
@@ -4055,7 +4055,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "2970ba34",
+   "id": "26712896",
    "metadata": {},
    "outputs": [
     {
@@ -4076,7 +4076,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "ec0359f2",
+   "id": "e5c4fdf4",
    "metadata": {},
    "outputs": [
     {
@@ -4099,7 +4099,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "c1c78ad2",
+   "id": "b8227461",
    "metadata": {},
    "outputs": [
     {
@@ -4372,7 +4372,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "13be8dce",
+   "id": "1205f731",
    "metadata": {},
    "outputs": [
     {
@@ -4393,7 +4393,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "c8ac0a66",
+   "id": "e043f436",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4405,7 +4405,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "d05cb3a9",
+   "id": "3a791e16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4415,7 +4415,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "4101a8ff",
+   "id": "f6355cac",
    "metadata": {},
    "outputs": [
     {
@@ -4800,7 +4800,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "9306bc59",
+   "id": "9b8abc9f",
    "metadata": {},
    "outputs": [
     {
@@ -4821,7 +4821,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "50298622",
+   "id": "7a82c6a7",
    "metadata": {},
    "outputs": [
     {
@@ -4843,7 +4843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d272f0c4",
+   "id": "f0212dce",
    "metadata": {},
    "source": [
     "### 마지막 저장"
@@ -4852,7 +4852,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "49aed35f",
+   "id": "ef394017",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4863,7 +4863,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "d4c2b5fb",
+   "id": "6615faa7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4873,7 +4873,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "cca3df8c",
+   "id": "d514da75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4884,7 +4884,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "6a04fad0",
+   "id": "48988b94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4925,8 +4925,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 79,
+   "id": "22025b64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sales.to_csv('../datas/huge/df_sales_after.csv', encoding='cp949')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 74,
-   "id": "5e6bd513",
+   "id": "3a7ea0d3",
    "metadata": {},
    "outputs": [
     {
@@ -4990,7 +5000,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "89e89fec",
+   "id": "f7843392",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5000,7 +5010,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "ffb71cdd",
+   "id": "ee94e51b",
    "metadata": {},
    "outputs": [
     {
@@ -5021,7 +5031,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb4ef8a3",
+   "id": "af2f7522",
    "metadata": {},
    "outputs": [],
    "source": []
