--- a/codes/20210712_전처리_김현용.ipynb
+++ b/codes/20210712_전처리_김현용.ipynb
@@ -325,10 +325,10 @@
    "outputs": [],
    "source": [
     "# 전통시장 품목별 가격정보 데이터\n",
-    "price_2013_2017 = pd.read_csv('C:/Users/123gu/Desktop/data-visualization-8/datas/huge/생필품 농수축산물 가격 정보(2013년_2017년).csv', encoding='CP949', engine='python')\n",
-    "price_2018 = pd.read_csv('C:/Users/123gu/Desktop/data-visualization-8/datas/huge/생필품 농수축산물 가격 정보(2018년).csv', encoding='CP949', engine='python')\n",
-    "price_2019 = pd.read_csv('C:/Users/123gu/Desktop/data-visualization-8/datas/huge/생필품 농수축산물 가격 정보(2019년).csv', encoding='CP949', engine='python')\n",
-    "price_2020 = pd.read_csv('C:/Users/123gu/Desktop/data-visualization-8/datas/huge/생필품 농수축산물 가격 정보(2020년).csv', encoding='CP949', engine='python')"
+    "price_2013_2017 = pd.read_csv('../datas/huge/생필품 농수축산물 가격 정보(2013년_2017년).csv', encoding='CP949', engine='python')\n",
+    "price_2018 = pd.read_csv('../datas/huge/생필품 농수축산물 가격 정보(2018년).csv', encoding='CP949', engine='python')\n",
+    "price_2019 = pd.read_csv('../datas/huge/생필품 농수축산물 가격 정보(2019년).csv', encoding='CP949', engine='python')\n",
+    "price_2020 = pd.read_csv('../datas/huge/생필품 농수축산물 가격 정보(2020년).csv', encoding='CP949', engine='python')"
    ]
   },
   {
