--- a/codes/210712전처리통합.ipynb
+++ b/codes/210712전처리통합.ipynb
@@ -2645,7 +2645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "4564eec4",
    "metadata": {},
    "outputs": [],
@@ -2655,7 +2655,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 78,
+   "id": "8393f6ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>일련번호</th>\n",
+       "      <th>시장이름</th>\n",
+       "      <th>품목이름</th>\n",
+       "      <th>실판매규격</th>\n",
+       "      <th>가격(원)</th>\n",
+       "      <th>년도-월</th>\n",
+       "      <th>자치구이름</th>\n",
+       "      <th>년도</th>\n",
+       "      <th>분기</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1621162</td>\n",
+       "      <td>통인시장</td>\n",
+       "      <td>양파(1.5kg망)</td>\n",
+       "      <td>1kg</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>2020-12</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1628949</td>\n",
+       "      <td>남부종합시장</td>\n",
+       "      <td>호박</td>\n",
+       "      <td>1개268g</td>\n",
+       "      <td>1500</td>\n",
+       "      <td>2020-12</td>\n",
+       "      <td>서초구</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1622882</td>\n",
+       "      <td>통인시장</td>\n",
+       "      <td>양파(1.5kg망)</td>\n",
+       "      <td>1kg</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>2020-12</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1622883</td>\n",
+       "      <td>통인시장</td>\n",
+       "      <td>상추(100g)</td>\n",
+       "      <td>400g</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>2020-12</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1622885</td>\n",
+       "      <td>통인시장</td>\n",
+       "      <td>호박(인큐베이터)</td>\n",
+       "      <td>1개</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>2020-12</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      일련번호    시장이름        품목이름   실판매규격  가격(원)     년도-월 자치구이름    년도  분기\n",
+       "0  1621162    통인시장  양파(1.5kg망)     1kg   2000  2020-12   종로구  2020   4\n",
+       "1  1628949  남부종합시장          호박  1개268g   1500  2020-12   서초구  2020   4\n",
+       "2  1622882    통인시장  양파(1.5kg망)     1kg   2000  2020-12   종로구  2020   4\n",
+       "3  1622883    통인시장    상추(100g)    400g   3000  2020-12   종로구  2020   4\n",
+       "4  1622885    통인시장   호박(인큐베이터)      1개   1000  2020-12   종로구  2020   4"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_necessity.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "f3760be5",
    "metadata": {},
    "outputs": [],
@@ -2665,7 +2786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "6d8e03c6",
    "metadata": {},
    "outputs": [
@@ -2682,7 +2803,7 @@
        "       '숭인시장', '방림시장', '구로시장', '영동전통시장'], dtype=object)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2693,7 +2814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "72f3fd89",
    "metadata": {},
    "outputs": [],
@@ -2703,7 +2824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "ed4ace78",
    "metadata": {},
    "outputs": [],
@@ -2727,7 +2848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "3599b9cb",
    "metadata": {},
    "outputs": [],
@@ -2736,9 +2857,7 @@
     "    '방배종합시장': \"남부종합시장\", \n",
     "    '남성시장': \"사당시장\", \n",
     "    '영동시장': \"영동전통시장\", \n",
-    "#     '장위골목시장': \"장위전통시장\", \n",
     "    '장위전통시장': \"장위골목시장\", \n",
-    "#     '용문시장': \"용문전통시장\",\n",
     "    '용문전통시장': \"용문시장\",\n",
     "    '신원시장(신림1동)': \"신원시장\", \n",
     "    '수유재래시장': \"수유전통시장\", \n",
@@ -2755,7 +2874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "d22b13fc",
    "metadata": {},
    "outputs": [],
@@ -2765,7 +2884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "3cd784d9",
    "metadata": {},
    "outputs": [],
@@ -2775,7 +2894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "03566bb5",
    "metadata": {},
    "outputs": [],
@@ -2795,7 +2914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "718a03d3",
    "metadata": {},
    "outputs": [
@@ -2805,7 +2924,7 @@
        "array(['남구로시장', '도곡시장', '구로시장'], dtype=object)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2816,7 +2935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "15d1149e",
    "metadata": {},
    "outputs": [
@@ -3007,7 +3126,7 @@
        "[6504 rows x 9 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3018,7 +3137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "822758c2",
    "metadata": {},
    "outputs": [
@@ -3209,7 +3328,7 @@
        "[167868 rows x 9 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3222,7 +3341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "eb03ee44",
    "metadata": {},
    "outputs": [],
@@ -3232,7 +3351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "83ded0fe",
    "metadata": {},
    "outputs": [],
@@ -3242,7 +3361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "id": "1eaedd18",
    "metadata": {},
    "outputs": [
@@ -3420,7 +3539,7 @@
        "[9036 rows x 6 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3439,7 +3558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "c243925e",
    "metadata": {},
    "outputs": [],
@@ -3451,7 +3570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "id": "919a59d6",
    "metadata": {},
    "outputs": [],
@@ -3461,7 +3580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "id": "a6c1e961",
    "metadata": {
     "scrolled": true
@@ -3473,7 +3592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "id": "f3264bfd",
    "metadata": {
     "scrolled": true
@@ -3485,7 +3604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "id": "ec43996b",
    "metadata": {},
    "outputs": [],
@@ -3497,7 +3616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "id": "73e17af3",
    "metadata": {
     "scrolled": true
@@ -3912,7 +4031,7 @@
        "[6283 rows x 529 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3932,7 +4051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "id": "7a80636b",
    "metadata": {},
    "outputs": [],
@@ -3942,7 +4061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "id": "cf755462",
    "metadata": {},
    "outputs": [],
@@ -3953,7 +4072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "id": "f1a2fd90",
    "metadata": {},
    "outputs": [],
@@ -3997,7 +4116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "id": "b4b2bea1",
    "metadata": {},
    "outputs": [],
@@ -4007,7 +4126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "id": "f4123313",
    "metadata": {},
    "outputs": [],
@@ -4023,7 +4142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "id": "62f31c3a",
    "metadata": {},
    "outputs": [],
@@ -4033,7 +4152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "id": "3a75027d",
    "metadata": {},
    "outputs": [
@@ -4043,7 +4162,7 @@
        "set()"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4054,7 +4173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "id": "26712896",
    "metadata": {},
    "outputs": [
@@ -4064,7 +4183,7 @@
        "array(['남부골목시장', '남부종합시장'], dtype=object)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4075,7 +4194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "id": "e5c4fdf4",
    "metadata": {},
    "outputs": [
@@ -4087,7 +4206,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4098,7 +4217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "id": "b8227461",
    "metadata": {},
    "outputs": [
@@ -4360,7 +4479,7 @@
        "[7 rows x 76 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4371,7 +4490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "id": "1205f731",
    "metadata": {},
    "outputs": [
@@ -4381,7 +4500,7 @@
        "array([2020], dtype=int64)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4392,7 +4511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "id": "e043f436",
    "metadata": {},
    "outputs": [],
@@ -4404,7 +4523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "id": "3a791e16",
    "metadata": {},
    "outputs": [],
@@ -4414,7 +4533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 64,
    "id": "f6355cac",
    "metadata": {},
    "outputs": [
@@ -4788,7 +4907,7 @@
        "[149924 rows x 82 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4925,7 +5044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 74,
    "id": "22025b64",
    "metadata": {},
    "outputs": [],
@@ -4935,7 +5054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 75,
    "id": "3a7ea0d3",
    "metadata": {},
    "outputs": [
@@ -4988,7 +5107,7 @@
        "245    우림시장  37.470326  126.920401"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4999,7 +5118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 76,
    "id": "f7843392",
    "metadata": {},
    "outputs": [],
@@ -5009,7 +5128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 77,
    "id": "ee94e51b",
    "metadata": {},
    "outputs": [
@@ -5019,7 +5138,7 @@
        "array([], dtype=object)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
